# cholupdates

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish-linux.yml  python-publish.yml
docs/source/: conf.py  index.rst
docs/source/api/: cholupdates.rank_1.rst
docs/source/api/sphinx-autogen/rank_1/: cholupdates.rank_1.downdate.rst  cholupdates.rank_1.downdate_seeger.rst  cholupdates.rank_1.update.rst  cholupdates.rank_1.update_seeger.rst
notebooks/: benchmark_rank_1.ipynb  goldfarb_additive.ipynb  goldfarb_multiplicative.ipynb
src/cholupdates/: .gitignore  __init__.py  _blas_polymorphic.pxd  _blas_polymorphic.pyx  _rank_1_update.py  utils.py
src/cholupdates/rank_1/: __init__.py  _arg_validation.py  _downdate.py  _seeger.py  _seeger_impl_cython.pyx  _seeger_impl_python.py  _update.py
tests/cholupdates/: _utils.py  conftest.py  test_placeholder.py  test_rank_1_update.py  test_utils.py
tests/cholupdates/rank_1/: conftest.py
tests/cholupdates/rank_1/downdate/: conftest.py  test_downdate.py  test_downdate_seeger.py
tests/cholupdates/rank_1/update/: conftest.py  test_update.py  test_update_seeger.py
