[build-system]
requires = [
    "setuptools>=46.4.0",
    "wheel",
    "setuptools_scm[toml]>=6.0",
    "Cython",
    "scipy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
write_to = "src/cholupdates/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
]
testpaths = [
    "src",
    "tests",
]

[tool.pylint.master]
extension-pkg-whitelist = "numpy"

[tool.pylint.format]
# Configuration suggested by Black:
# https://github.com/psf/black/blob/7f75fe3669ebf0627b1b0476a6d02047e909b959/docs/compatible_configs.md#black-compatible-configurations
max-line-length = "88"

[tool.pylint.messages_control]
disable = [
    # Exceptions suggested by Black:
    # https://github.com/psf/black/blob/7f75fe3669ebf0627b1b0476a6d02047e909b959/docs/compatible_configs.md#black-compatible-configurations
    "bad-continuation",
    "bad-whitespace",
    # Custom exceptions
    "invalid-name",
    "too-many-arguments",
    "duplicate-code",
]

[tool.isort]
# Configuration suggested by Black:
# https://github.com/psf/black/blob/7f75fe3669ebf0627b1b0476a6d02047e909b959/docs/compatible_configs.md#black-compatible-configurations
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
