[metadata]
name = cholupdates
version = attr: cholupdates.__version__
description = Efficient Low-Rank Updates for Cholesky Decompositions
url = https://github.com/marvinpfoertner/cholupdates
author = Marvin Pförtner
author-email = marvin.pfoertner@icloud.com
license = MIT
long-description = file: README.md
long-description-content-type = text/markdown
keywords = low-rank, rank-1, rank, one, update, downdate, cholesky
platforms = any

[options]
packages = find:
include_package_data = True
package_dir =
    =src
zip_safe = False  # Needed for Cython to work
install_requires =
    numpy
    scipy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
linting =
    pylint
formatting =
    black
    isort
